--- a/kafka-consumer/deploy/config/poc.yml
+++ b/kafka-consumer/deploy/config/poc.yml
@@ -1,15 +1,15 @@
 custom:
   SCHEMA_REGISTRY_CREDENTIALS_ARN: 'value'
-  kafkaEvents:
-    accessConfigurations: 
-      saslPlainAuth: ${self:custom.kafka.credentials.consumer}
-    bootstrapServers:
-      - pkc-e8mp5.eu-west-1.aws.confluent.cloud:9092
+  kafka:
+    bootstrapServers: pkc-e8mp5.eu-west-1.aws.confluent.cloud:9092
+    credentials:
+      consumer: arn:aws:secretsmanager:eu-west-1:250098771573:secret:/manual/yeti/kafka/confluent-dev-GRHIgz
   schemaRegistry:
     credentials: arn:aws:secretsmanager:eu-west-1:250098771573:secret:/manual/yeti/schema-registry/confluent-dev-59slRC
 
 kafkaEvents:
-  - kafka:
-      accessConfigurations: ${self:custom.kafkaEvents.accessConfigurations}
-      bootstrapServers: ${self:custom.kafkaEvents.bootstrapServers}
-      topic: abcam.event.target.biochemical.sit
+  biochemical:
+    accessConfigurations: 
+      saslPlainAuth: ${self:custom.kafka.credentials.consumer}
+    bootstrapServers: ${self:custom.kafka.bootstrapServers}
+    topic: abcam.event.target.biochemical.sit
