--- a/search/deploy/config/poc.yml
+++ b/search/deploy/config/poc.yml
@@ -9,6 +9,6 @@ custom:
 kafkaEvents:
   biochemical:
     accessConfigurations:   
-      saslPlainAuth: "arn:aws:secretsmanager:eu-west-1:250098771573:secret:/manual/yeti/kafka/confluent-dev-GRHIgz" # "${self:custom.kafka.credentials.consumer}"
-    bootstrapServers: "pkc-e8mp5.eu-west-1.aws.confluent.cloud:9092" # "${self:custom.kafka.bootstrapServers}"
-    topic: abcam.event.target.target.sit
+      saslPlainAuth: arn:aws:secretsmanager:eu-west-1:250098771573:secret:/manual/yeti/kafka/confluent-dev-GRHIgz
+    bootstrapServers: pkc-e8mp5.eu-west-1.aws.confluent.cloud:9092 
+    topic: abcam.event.target.biochemical.sit
